--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -37,7 +37,7 @@ jobs:
               aws_iam_role_arn: "arn:aws:iam::723448370684:role/my_role20230517183106294400000001"
               aws_region: "us-east-1"
               github_action_runner_version: v2.300.2 # Optional (default is latest release)
-              ec2_instance_type: c5.4xlarge
+              ec2_instance_type: t2.2xlarge
               ec2_ami_id: ami-04a81a99f5ec58529
               ec2_root_disk_size_gb: "100"                 # Optional - (defaults to AMI settings)
               ec2_root_disk_ebs_class: "gp2"               # Optional - Only used with custom volume root size (defaults to gp2)
