--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -2,6 +2,7 @@ name: 'Release: Static Production'
 
 permissions:
   id-token: write
+  contents: read
 
 on:
   workflow_dispatch:
@@ -11,51 +12,50 @@ on:
 
 jobs:
   start-runner:
-        timeout-minutes: 5                  
-        name: Start self-hosted EC2 runner   
-        runs-on: ubuntu-latest
-        permissions:
-          actions: write        
-          contents: read
-          id-token: write      
-        steps:
-          - name: Configure AWS credentials
-            id: creds
-            uses: aws-actions/configure-aws-credentials@v4
-            with:
-              aws-region: "us-east-1"
-              role-to-assume: "arn:aws:iam::369827282464:role/deployment-role"
-              output-credentials: true                  
-          - name: Start EC2 runner
-            id: start-ec2-runner
-            uses: NextChapterSoftware/ec2-action-builder@v1.5
-            with:
-              github_token: ${{ secrets.PAT }}
-              aws_access_key_id: ${{ steps.creds.outputs.aws-access-key-id }}
-              aws_secret_access_key: ${{ steps.creds.outputs.aws-secret-access-key }}
-              aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
-              aws_iam_role_arn: "arn:aws:iam::723448370684:role/my_role20230517183106294400000001"
-              aws_region: "us-east-1"
-              github_action_runner_version: v2.300.2 # Optional (default is latest release)
-              ec2_instance_type: t2.2xlarge
-              ec2_ami_id: ami-04a81a99f5ec58529
-              ec2_root_disk_size_gb: "100"                 # Optional - (defaults to AMI settings)
-              ec2_root_disk_ebs_class: "gp2"               # Optional - Only used with custom volume root size (defaults to gp2)
-              ec2_subnet_id: "subnet-e5717fd8"
-              ec2_security_group_id: "sg-0c24020172d67c06a"
-              ec2_instance_ttl: 40                          # Optional - (default is 60 minutes)
-              ec2_spot_instance_strategy: BestEffort    # Other options are: None, BestEffort, MaxPerformance 
-              ec2_instance_tags: >                          # Required for IAM role resource permission scoping
-                [
-                  {"Key": "Owner", "Value": "deploybot"}
-                ]
+    timeout-minutes: 5
+    name: Start self-hosted EC2 runner
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write        
+      contents: read
+      id-token: write      
+    steps:
+      - name: Configure AWS credentials
+        id: creds
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "us-east-1"
+          role-to-assume: "arn:aws:iam::369827282464:role/deployment-role"
+          output-credentials: true                  
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: NextChapterSoftware/ec2-action-builder@v1.5
+        with:
+          github_token: ${{ secrets.PAT }}
+          aws_access_key_id: ${{ steps.creds.outputs.aws-access-key-id }}
+          aws_secret_access_key: ${{ steps.creds.outputs.aws-secret-access-key }}
+          aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
+          aws_iam_role_arn: "arn:aws:iam::723448370684:role/my_role20230517183106294400000001"
+          aws_region: "us-east-1"
+          github_action_runner_version: v2.300.2 # Optional (default is latest release)
+          ec2_instance_type: t2.2xlarge
+          ec2_ami_id: ami-04a81a99f5ec58529
+          ec2_root_disk_size_gb: "100"                 # Optional - (defaults to AMI settings)
+          ec2_root_disk_ebs_class: "gp2"               # Optional - Only used with custom volume root size (defaults to gp2)
+          ec2_subnet_id: "subnet-e5717fd8"
+          ec2_security_group_id: "sg-0c24020172d67c06a"
+          ec2_instance_ttl: 240                         # Increased TTL to ensure the instance persists
+          ec2_spot_instance_strategy: BestEffort        # Other options are: None, BestEffort, MaxPerformance 
+          ec2_instance_tags: >                          # Required for IAM role resource permission scoping
+            [
+              {"Key": "Owner", "Value": "deploybot"}
+            ]
 
-  # Job that runs on the self-hosted runner 
   queue:
     timeout-minutes: 1
     needs:
       - start-runner
-    runs-on: ${{ github.run_id }}   
+    runs-on: self-hosted
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
@@ -67,11 +67,12 @@ jobs:
           skip_after_successful_duplicate: true
           paths_ignore: '["**/README.md", "**/docs/**"]'
           do_not_skip: '["workflow_dispatch", "schedule"]'
+
   verify:
-    timeout-minutes: 1
-    needs:
-      - start-runner
-    runs-on: ${{ github.run_id }}   
+    timeout-minutes: 10
+    needs: 
+      - queue
+    runs-on: self-hosted
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -91,13 +92,12 @@ jobs:
           npx gulp lintNode
           npx gulp lintYaml
           npm run test:platform
-#          npm run test:playground
+
   prepare:
-    timeout-minutes: 1
+    timeout-minutes: 10
     needs:
-      - start-runner
       - verify
-    runs-on: ${{ github.run_id }}   
+    runs-on: self-hosted
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -127,9 +127,8 @@ jobs:
   build:
     env:
       APP_ENV: production
-    needs: 
+    needs:
       - prepare
-      - start-runner
     strategy:
       matrix:
         language:
@@ -151,7 +150,7 @@ jobs:
 #            'pl',
 #            'vi',
           ]
-    runs-on: ${{ github.run_id }}   
+    runs-on: self-hosted
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -198,14 +197,12 @@ jobs:
   deploy:
     needs: 
       - build
-      - start-runner
-    runs-on: ${{ github.run_id }}   
+    runs-on: self-hosted
     steps:
       - name: Set up AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: "arn:aws:iam::369827282464:role/deployment-role"
           aws-region: us-east-1
 
       - name: Cloning repository
@@ -234,5 +231,7 @@ jobs:
           npx gulp buildFinalize
 
       - name: Deploying to S3
+        env:
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
         run: |
           aws s3 sync artifacts/ s3://${{ env.S3_BUCKET }}/ --delete
