--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -11,46 +11,49 @@ on:
 
 jobs:
   start-runner:
-        timeout-minutes: 5                  
-        name: Start self-hosted EC2 runner   
-        runs-on: ubuntu-latest
-        permissions:
-          actions: write        
-          contents: read
-          id-token: write      
-        steps:
-          - name: Configure AWS credentials
-            id: creds
-            uses: aws-actions/configure-aws-credentials@v4
-            with:
-              aws-region: "us-east-1"
-              role-to-assume: "arn:aws:iam::369827282464:role/deployment-role"
-              output-credentials: true                  
-          - name: Start EC2 runner
-            id: start-ec2-runner
-            uses: NextChapterSoftware/ec2-action-builder@v1.5
-            with:
-              github_token: ${{ secrets.PAT }}
-              aws_access_key_id: ${{ steps.creds.outputs.aws-access-key-id }}
-              aws_secret_access_key: ${{ steps.creds.outputs.aws-secret-access-key }}
-              aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
-              aws_iam_role_arn: "arn:aws:iam::369827282464:role/deployment-role"
-              aws_region: "us-east-1"
-              github_action_runner_version: v2.300.2 # Optional (default is latest release)
-              ec2_instance_type: t2.2xlarge
-              ec2_ami_id: ami-04a81a99f5ec58529
-              ec2_root_disk_size_gb: "100"                 # Optional - (defaults to AMI settings)
-              ec2_root_disk_ebs_class: "gp2"               # Optional - Only used with custom volume root size (defaults to gp2)
-              ec2_subnet_id: "subnet-e5717fd8"
-              ec2_security_group_id: "sg-0c24020172d67c06a"
-              ec2_instance_ttl: 40                          # Optional - (default is 60 minutes)
-              ec2_spot_instance_strategy: BestEffort    # Other options are: None, BestEffort, MaxPerformance 
-              ec2_instance_tags: >                          # Required for IAM role resource permission scoping
-                [
-                  {"Key": "Owner", "Value": "deploybot"}
-                ]
+    timeout-minutes: 5                  
+    name: Start self-hosted EC2 runner   
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write        
+      contents: read
+      id-token: write      
+    outputs:
+      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
+    steps:
+      - name: Configure AWS credentials
+        id: creds
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "us-east-1"
+          role-to-assume: "arn:aws:iam::369827282464:role/deployment-role"
+          output-credentials: true                  
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: NextChapterSoftware/ec2-action-builder@v1.5
+        with:
+          github_token: ${{ secrets.PAT }}
+          aws_access_key_id: ${{ steps.creds.outputs.aws-access-key-id }}
+          aws_secret_access_key: ${{ steps.creds.outputs.aws-secret-access-key }}
+          aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
+          aws_iam_role_arn: "arn:aws:iam::369827282464:role/deployment-role"
+          aws_region: "us-east-1"
+          github_action_runner_version: v2.300.2
+          ec2_instance_type: t2.2xlarge
+          ec2_ami_id: ami-04a81a99f5ec58529
+          ec2_root_disk_size_gb: "100"
+          ec2_root_disk_ebs_class: "gp2"
+          ec2_subnet_id: "subnet-e5717fd8"
+          ec2_security_group_id: "sg-0c24020172d67c06a"
+          ec2_instance_ttl: 40
+          ec2_spot_instance_strategy: BestEffort
+          ec2_instance_tags: >
+            [
+              {"Key": "Owner", "Value": "deploybot"}
+            ]
+      - name: Set output
+        run: echo "ec2-instance-id=${{ steps.start-ec2-runner.outputs.ec2-instance-id }}" >> $GITHUB_OUTPUT
 
-  # Job that runs on the self-hosted runner 
   queue:
     needs:
       - start-runner
@@ -70,7 +73,7 @@ jobs:
   verify:
     timeout-minutes: 1
     needs:
-      - start-runner
+      - queue
     runs-on: ${{ github.run_id }}   
     steps:
       - name: Cloning repository
@@ -96,7 +99,7 @@ jobs:
   prepare:
     timeout-minutes: 1
     needs:
-      - start-runner
+      - queue
       - verify
     runs-on: ${{ github.run_id }}   
     steps:
@@ -130,7 +133,6 @@ jobs:
       APP_ENV: production
     needs: 
       - prepare
-      - start-runner
     strategy:
       matrix:
         language:
@@ -199,7 +201,6 @@ jobs:
   deploy:
     needs: 
       - build
-      - start-runner
     runs-on: ${{ github.run_id }}   
     steps:
       - name: Set up AWS Credentials
@@ -237,3 +238,5 @@ jobs:
       - name: Deploying to S3
         run: |
           aws s3 sync artifacts/ s3://${{ env.S3_BUCKET }}/ --delete
+
+  
