--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -34,7 +34,7 @@ jobs:
           aws_access_key_id: ${{ steps.creds.outputs.aws-access-key-id }}
           aws_secret_access_key: ${{ steps.creds.outputs.aws-secret-access-key }}
           aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
-          aws_iam_role_arn: "arn:aws:iam::723448370684:role/my_role20230517183106294400000001"
+          aws_iam_role_arn: "arn:aws:iam::369827282464:role/deployment-role"
           aws_region: "us-east-1"
           github_action_runner_version: v2.300.2 # Optional (default is latest release)
           ec2_instance_type: t2.2xlarge
