--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -60,21 +60,10 @@ jobs:
         language:
           [
             'en',
-#            'de',
             'fr',
-#            'ar',
             'es',
             'hi',
-#            'it',
-#            'id',
-#            'ja',
-#            'ko',
             'pt_BR',
-#            'ru',
-#            'tr',
-#            'zh_CN',
-#            'pl',
-#            'vi',
           ]
     steps:
       - id: skip_check
@@ -98,6 +87,12 @@ jobs:
       - name: Upgrade node-gyp
         run: npm install -g node-gyp@latest
 
+      - name: Ensure Python 3 is used
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-pip
+          npm config set python /usr/bin/python3
+
       - name: Installing Node.js packages
         run: npm ci --legacy-peer-deps
 
@@ -107,7 +102,6 @@ jobs:
           npx gulp lintNode
           npx gulp lintYaml
           npm run test:platform
-#          npm run test:playground
 
       - name: Preparing build
         env:
