--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -83,6 +83,12 @@ jobs:
         with:
           node-version: 14
       
+      - name: Generate package-lock.json
+        run: npm install --package-lock-only
+        
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+      
       - name: Upgrade node-gyp
         run: npm install -g node-gyp@latest
 
