--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -1,15 +1,56 @@
----
 name: 'Release: Static Production'
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - static-production-amp-dev
+      - aws-dev
 
 jobs:
-  queue:
+  start-runner:
+    timeout-minutes: 5
+    name: Start self-hosted EC2 runner
     runs-on: ubuntu-latest
+    permissions:
+      actions: write        
+      contents: read
+      id-token: write
+    steps:
+      - name: Configure AWS credentials
+        id: creds
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "us-east-1"
+          role-to-assume: "arn:aws:iam::369827282464:role/deployment-role"
+          output-credentials: true                  
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: NextChapterSoftware/ec2-action-builder@v1.5
+        with:
+          github_token: ${{ secrets.PAT }}
+          aws_access_key_id: ${{ steps.creds.outputs.aws-access-key-id }}
+          aws_secret_access_key: ${{ steps.creds.outputs.aws-secret-access-key }}
+          aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
+          aws_iam_role_arn: "arn:aws:iam::369827282464:role/deployment-role"
+          aws_region: "us-east-1"
+          github_action_runner_version: v2.300.2 # Optional (default is latest release)
+          ec2_instance_type: t2.2xlarge
+          ec2_ami_id: ami-04a81a99f5ec58529
+          ec2_root_disk_size_gb: "100"                 # Optional - (defaults to AMI settings)
+          ec2_root_disk_ebs_class: "gp2"               # Optional - Only used with custom volume root size (defaults to gp2)
+          ec2_subnet_id: "subnet-e5717fd8"
+          ec2_security_group_id: "sg-0c24020172d67c06a"
+          ec2_instance_ttl: 40                          # Optional - (default is 60 minutes)
+          ec2_spot_instance_strategy: BestEffort    # Other options are: None, BestEffort, MaxPerformance 
+          ec2_instance_tags: >                          # Required for IAM role resource permission scoping
+            [
+              {"Key": "Owner", "Value": "deploybot"}
+            ]
+
+  queue:
+    needs:
+          - start-runner
+    runs-on: ${{ github.run_id }}
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
@@ -21,8 +62,11 @@ jobs:
           skip_after_successful_duplicate: true
           paths_ignore: '["**/README.md", "**/docs/**"]'
           do_not_skip: '["workflow_dispatch", "schedule"]'
+
   verify:
-    runs-on: ubuntu-latest
+    needs:
+          - start-runner
+    runs-on: ${{ github.run_id }}
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -43,9 +87,12 @@ jobs:
           npx gulp lintYaml
           npm run test:platform
 #          npm run test:playground
+
   prepare:
-    needs: verify
-    runs-on: ubuntu-latest
+    needs:
+          - start-runner
+          - verify
+    runs-on: ${{ github.run_id }}
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -75,7 +122,9 @@ jobs:
   build:
     env:
       APP_ENV: production
-    needs: prepare
+    needs: 
+      - prepare
+      - start-runner
     strategy:
       matrix:
         language:
@@ -97,7 +146,7 @@ jobs:
 #            'pl',
 #            'vi',
           ]
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.run_id }}
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -142,8 +191,10 @@ jobs:
           path: artifacts
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
+    needs: 
+      - build
+      - start-runner
+    runs-on: ${{ github.run_id }}
     environment: Production
     env:
       APP_ENV: production
