test with new AMI

--- a/.github/workflows/release-static-production.yml
+++ b/.github/workflows/release-static-production.yml
@@ -3,9 +3,9 @@
     
     on:
       workflow_dispatch:
-      push:
-        branches:
-          - aws-dev
+      # push:
+      #   branches:
+      #     - aws-dev
     
     jobs:
       queue:
