test with new AMI

--- a/.github/workflows/aws-static-production.yml
+++ b/.github/workflows/aws-static-production.yml
@@ -2,9 +2,9 @@ name: 'Release: Static Production.'
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - aws-dev
+  push:
+    branches:
+      - aws-dev
 
 jobs:
   start-runner:
