--- a/.github/workflows/aws-static-production.yml
+++ b/.github/workflows/aws-static-production.yml
@@ -47,26 +47,11 @@ jobs:
               {"Key": "Owner", "Value": "deploybot"}
             ]
 
-  queue:
-    needs:
-          - start-runner
+  build-and-deploy:
+    needs: start-runner
     runs-on: ${{ github.run_id }}
-    outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
-    steps:
-      - id: skip_check
-        uses: fkirc/skip-duplicate-actions@master
-        with:
-          concurrent_skipping: 'outdated_runs'
-          cancel_others: true
-          skip_after_successful_duplicate: true
-          paths_ignore: '["**/README.md", "**/docs/**"]'
-          do_not_skip: '["workflow_dispatch", "schedule"]'
-
-  verify:
-    needs:
-          - start-runner
-    runs-on: ${{ github.run_id }}
+    env:
+      APP_ENV: production
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
@@ -79,6 +64,16 @@ jobs:
 
       - name: Installing Node.js packages
         run: npm ci
+
+      - name: Queue check
+        id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          concurrent_skipping: 'outdated_runs'
+          cancel_others: true
+          skip_after_successful_duplicate: true
+          paths_ignore: '["**/README.md", "**/docs/**"]'
+          do_not_skip: '["workflow_dispatch", "schedule"]'
 
       - name: Running tests
         run: |
@@ -88,77 +83,11 @@ jobs:
           npm run test:platform
 #          npm run test:playground
 
-  prepare:
-    needs:
-          - start-runner
-          - verify
-    runs-on: ${{ github.run_id }}
-    steps:
-      - name: Cloning repository
-        uses: actions/checkout@v4
-
-      - name: Setting up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 16
-          cache: npm
-
-      - name: Installing Node.js packages
-        run: npm ci
-
       - name: Preparing build
         env:
-          APP_ENV: production
           AMP_DOC_TOKEN: ${{ secrets.AMP_DOC_TOKEN }}
         run: |
           npx gulp buildPrepare
-
-      - name: Storing build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-setup
-          path: artifacts/setup.tar.gz
-
-  build:
-    env:
-      APP_ENV: production
-    needs: 
-      - prepare
-      - start-runner
-    strategy:
-      matrix:
-        language:
-          [
-            'en',
-#            'de',
-            'fr',
-#            'ar',
-            'es',
-            'hi',
-#            'it',
-#            'id',
-#            'ja',
-#            'ko',
-            'pt_BR',
-#            'ru',
-#            'tr',
-#            'zh_CN',
-#            'pl',
-#            'vi',
-          ]
-    runs-on: ${{ github.run_id }}
-    steps:
-      - name: Cloning repository
-        uses: actions/checkout@v4
-
-      - name: Setting up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 16
-          cache: npm
-
-      - name: Installing Node.js packages
-        run: npm ci
 
       - name: Setting up Python
         uses: actions/setup-python@v5
@@ -170,61 +99,21 @@ jobs:
           sudo apt-get install libyaml-dev
           pip install grow --upgrade-strategy eager
 
-      - name: Fetching build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-setup
-          path: artifacts
-
-      - name: Unpacking artifacts
-        run: |
-          npx gulp unpackArtifacts
-
       - name: Building pages
         run: |
-          npx gulp buildPages --locales ${{ matrix.language }}
-
-      - name: Storing build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: pages-${{ github.run_id }}-${{ matrix.language }}
-          path: artifacts
-
-  deploy:
-    needs: 
-      - build
-      - start-runner
-    runs-on: ${{ github.run_id }}
-    environment: Production
-    env:
-      APP_ENV: production
-      NETLIFY_DEPLOY_TOKEN: ${{ secrets.NETLIFY_DEPLOY_TOKEN }}
-    steps:
-      - name: Cloning repository
-        uses: actions/checkout@v4
-
-      - name: Setting up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 16
-          cache: npm
-
-      - name: Installing Node.js packages
-        run: npm ci
-
-      - name: Fetching build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Unpacking artifacts
-        run: |
-          npx gulp unpackArtifacts
+          for lang in en fr es hi pt_BR; do
+            npx gulp buildPages --locales $lang
+          done
+#          for lang in de ar it id ja ko ru tr zh_CN pl vi; do
+#            npx gulp buildPages --locales $lang
+#          done
 
       - name: Finalizing build
         run: |
           npx gulp buildFinalize
 
       - name: Deploying
+        env:
+          NETLIFY_DEPLOY_TOKEN: ${{ secrets.NETLIFY_DEPLOY_TOKEN }}
         run: |
           npx gulp staticDeploy
